# cloudevents-rust

./: Cargo.toml  README.md
cloudevents-actix-web/: Cargo.toml
cloudevents-actix-web/src/: event_reader.rs  event_writer.rs  lib.rs  request_reader.rs  response_writer.rs
cloudevents-rust/: Cargo.toml
cloudevents-rust/src/: http.rs  lib.rs
cloudevents-rust/src/event/: event.rs  json.rs  mod.rs  payload.rs  spec_version.rs
cloudevents-rust/src/http/: event.rs  mod.rs  reader.rs  writer.rs
cloudevents-rust/tests/: serialize_event.rs
