[package]
name = "cloudevents-actix-web"
version = "0.1.0"
authors = ["Francesco Guardiani <francescoguard@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "2.0.0"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "^0.3"
hostname = "0.1.5"
env_logger = "0.7.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
cloudevents-rust = { path = "../cloudevents-rust" }

[lib]
name = "cloudevents_actix_web"
