[package]
name = "cloudevents-rust"
version = "0.1.0"
authors = ["slinkydeveloper <francescoguard@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hostname = "0.1.5"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
derive_builder = "0.8.0"

[lib]
name = "cloudevents"
